--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+cmd/fireplace-server/database
+cmd/fireplace-server/fireplace-server
