--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.4",
+		"babel-preset-react": "^6.24.1",
 		"webpack": "^4.14.0",
 		"webpack-cli": "^3.0.8"
 	}
