--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -3,16 +3,24 @@
 	"version": "0.1.0",
 	"description": "Viewer UI for logs captured by Fireplace Server",
 	"scripts": {
-		"build": "webpack --mode production"
+		"build": "webpack --mode development"
 	},
 	"keywords": [],
 	"author": "Adam Presley",
 	"license": "MIT",
 	"devDependencies": {
 		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.4",
+		"babel-loader": "^7.1.5",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"webpack": "^4.14.0",
 		"webpack-cli": "^3.0.8"
+	},
+	"dependencies": {
+		"grommet": "^1.11.0",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
+		"react-router-dom": "^4.3.1"
 	}
 }
