--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -18,10 +18,15 @@
 		"webpack-cli": "^3.0.8"
 	},
 	"dependencies": {
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"grommet": "^1.11.0",
+		"npm": "^6.2.0",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
-		"react-router-dom": "^4.3.1"
+		"react-redux": "^5.0.7",
+		"react-router-dom": "^4.3.1",
+		"redux": "^4.0.0",
+		"redux-thunk": "^2.3.0"
 	}
 }
