--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -14,15 +14,19 @@
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
+		"css-loader": "^1.0.0",
+		"style-loader": "^0.22.0",
 		"webpack": "^4.14.0",
 		"webpack-cli": "^3.0.8"
 	},
 	"dependencies": {
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"fast-equals": "^1.5.3",
+		"moment": "^2.22.2",
 		"npm": "^6.2.0",
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
+		"react-datepicker": "^1.6.0",
 		"react-dom": "^16.4.1",
 		"react-router-dom": "^4.3.1"
 	}
