--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"description": "Viewer UI for logs captured by Fireplace Server",
 	"scripts": {
-		"build": "webpack --mode development"
+		"build": "webpack --mode development",
+		"build-prod": "webpack --mode production"
 	},
 	"keywords": [],
 	"author": "Adam Presley",
