--- a/cmd/fireplace-viewer/.babelrc
+++ b/cmd/fireplace-viewer/.babelrc
@@ -6,6 +6,12 @@
 		]
 	],
 	"plugins": [
-		"transform-object-rest-spread"
+		"transform-object-rest-spread",
+		[
+			"transform-runtime",
+			{
+				"regenerator": true
+			}
+		]
 	]
 }
