--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "FireplaceViewer",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "Viewer UI for logs captured by Fireplace Server",
 	"scripts": {
-		"build": "webpack --mode development",
-		"build-prod": "webpack --mode production"
+		"build": "webpack --mode development --watch --progress",
+		"build-prod": "webpack -p"
 	},
 	"keywords": [],
 	"author": "Adam Presley",
@@ -12,24 +12,28 @@
 	"devDependencies": {
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.5",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"css-loader": "^1.0.0",
+		"babel-runtime": "^6.26.0",
+		"css-loader": "^1.0.1",
+		"fast-equals": "^1.5.3",
 		"style-loader": "^0.22.0",
+		"vue-loader": "^15.6.0",
+		"vue-resource": "^1.5.1",
+		"vue-style-loader": "^4.1.2",
+		"vue-template-compiler": "^2.5.22",
 		"webpack": "^4.14.0",
 		"webpack-cli": "^3.0.8"
 	},
 	"dependencies": {
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"fast-equals": "^1.5.3",
+		"lodash": "^4.17.11",
 		"moment": "^2.22.2",
-		"npm": "^6.2.0",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.1",
-		"react-datepicker": "^1.6.0",
-		"react-dom": "^16.4.1",
-		"react-router-dom": "^4.3.1"
+		"npm": "^6.7.0",
+		"vue": "^2.5.22",
+		"vue-router": "^3.0.2",
+		"vuejs-datepicker": "^1.5.4",
+		"vuex": "^3.1.0"
 	}
 }
