--- a/cmd/fireplace-viewer/package.json
+++ b/cmd/fireplace-viewer/package.json
@@ -9,6 +9,10 @@
 	"keywords": [],
 	"author": "Adam Presley",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/app-nerds/fireplace"
+	},
 	"devDependencies": {
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.5",
@@ -23,12 +27,12 @@
 		"vue-loader": "^15.6.0",
 		"vue-resource": "^1.5.1",
 		"vue-style-loader": "^4.1.2",
-		"vue-template-compiler": "^2.5.22",
+		"vue-template-compiler": "^2.6.10",
 		"webpack": "^4.14.0",
 		"webpack-cli": "^3.0.8"
 	},
 	"dependencies": {
-		"lodash": "^4.17.11",
+		"lodash": "^4.17.14",
 		"moment": "^2.22.2",
 		"npm": "^6.7.0",
 		"vue": "^2.5.22",
