--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ cmd/fireplace-server/database
 cmd/fireplace-server/fireplace-server
 cmd/fireplace-viewer/node_modules
 cmd/fireplace-viewer/fireplace-viewer
+.vs
+cmd/sharpfireplace/bin
+cmd/sharpfireplace/obj
