--- a/cmd/fireplace-server/Makefile
+++ b/cmd/fireplace-server/Makefile
@@ -1,14 +1,32 @@
 .DEFAULT_GOAL := run
 
+# Location of UPX (https://upx.github.io)
+UPX := $(shell command -v upx 2> /dev/null)
+
+BUILDFLAGS=-s -w
+GC=go build -tags prod -ldflags "${BUILDFLAGS}"
+PROJNAME=fireplace-server
+
+verifydeps:
+ifndef UPX
+	$(error "UPX is not installed on this system. https://upx.github.io")
+endif
+
+generate: verifydeps
+	go generate
+
 run:
-	go run *.go
+	go run -tags dev github.com/app-nerds/fireplace/cmd/${PROJNAME}
 
-build-windows:
-	GOOS=windows GOARCH=amd64 go build
+test:
+	go test ./...
 
-build-linux:
-	GOOS=linux GOARCH=amd64 go build
+build-windows: generate
+	GOOS=windows GOARCH=amd64 ${GC} -o ${PROJNAME}.exe && ${UPX} ./${PROJNAME}.exe
 
-build-mac:
-	GOOS=darwin GOARCH=amd64 go build
+build-mac: generate
+	GOOS=darwin GOARCH=amd64 ${GC} -o ${PROJNAME}  && ${UPX} ./${PROJNAME}
+
+build-linux: generate
+	GOOS=linux GOARCH=amd64 ${GC} -o ${PROJNAME} && ${UPX} ./${PROJNAME}
 
