--- a/cmd/fireplace-viewer/Makefile
+++ b/cmd/fireplace-viewer/Makefile
@@ -1,20 +1,32 @@
 .DEFAULT_GOAL := run
 
-prepare:
+# Location of UPX (https://upx.github.io)
+UPX := $(shell command -v upx 2> /dev/null)
+
+BUILDFLAGS=-s -w
+GC=go build -tags prod -ldflags "${BUILDFLAGS}"
+PROJNAME=fireplace-viewer
+
+verifydeps:
+ifndef UPX
+	$(error "UPX is not installed on this system. https://upx.github.io")
+endif
+
+generate: verifydeps
 	go generate
 
 run:
-	go run *.go -debug=true
+	go run -tags dev github.com/app-nerds/fireplace/cmd/${PROJNAME}
 
-prod: prepare
-	go build
+test:
+	go test ./...
 
-build-windows: prepare
-	GOOS=windows GOARCH=amd64 go build
+build-windows: generate
+	GOOS=windows GOARCH=amd64 ${GC} -o ${PROJNAME}.exe && ${UPX} ./${PROJNAME}.exe
 
-build-linux: prepare
-	GOOS=linux GOARCH=amd64 go build
+build-mac: generate
+	GOOS=darwin GOARCH=amd64 ${GC} -o ${PROJNAME}  && ${UPX} ./${PROJNAME}
 
-build-mac: prepare
-	GOOS=darwin GOARCH=amd64 go build
+build-linux: generate
+	GOOS=linux GOARCH=amd64 ${GC} -o ${PROJNAME} && ${UPX} ./${PROJNAME}
 
