--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,36 @@
 version: "3"
+
 services:
-  app:
+  fireplace:
     container_name: "fireplace"
     restart: always
-    environment:
-      - access_token=$access_token
     build:
       context: .
       dockerfile: ./Dockerfile
       args:
-        accesstoken: "${GITHUB_TOKEN}"
+        GITHUB_TOKEN: ${GITHUB_TOKEN}
     ports:
       - "0.0.0.0:8999:8999"
     depends_on:
       - mongo
     networks:
-      - network-fireplace
-    environment:
-      - FIREPLACE_DATABASE_URL=mongodb://mongo:27017
-      - FIREPLACE_SERVER_LOGLEVEL=info
+      - fireplace
+    env_file:
+      - ./.env
   mongo:
     container_name: mongo-fireplace
-    image: mongo
+    image: mongo:bionic
     volumes:
-      - "./data:/data/db"
+      - mongo:/data/db
     ports:
       - "127.0.0.1:27017:27017"
     networks:
-      - network-fireplace
+      - fireplace
+
+volumes:
+  mongo:
+
 networks:
-  network-fireplace:
+  fireplace:
     driver: bridge
 
