Old log entries are now deleted on an interval

--- a/env.template
+++ b/env.template
@@ -19,6 +19,8 @@ FIREPLACE_DATABASE_URL=mongodb://localhost:27017
 FIREPLACE_SERVER_CERT=
 FIREPLACE_SERVER_PASSWORD=password
 FIREPLACE_PAGE_SIZE=100
+FIREPLACE_CLEAN_LOG_INTERVAL_DAYS=60
+FIREPLACE_CLEAN_LOG_SCHEDULE=0 0 * * *
 
 # Viewer
 FIREPLACEVIEWER_SERVER_HOST=localhost:8090
