Docker setup is working again

--- a/cmd/fireplace-server/Makefile
+++ b/cmd/fireplace-server/Makefile
@@ -4,7 +4,7 @@
 help:
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
-VERSION=$(shell cat ./VERSION)
+VERSION=$(shell cat ../../VERSION)
 BUILDFLAGS=-s -w -X 'main.Version=${VERSION}'
 PROJECTNAME=fireplace-server
 GOENV=CGO_ENABLED=0 GOPRIVATE="github.com/app-nerds/*" GONOPROXY="github.com/app-nerds/*"
