--- a/cmd/fireplace-viewer/app/manifest.json
+++ b/cmd/fireplace-viewer/app/manifest.json
@@ -3,32 +3,32 @@
 	"short_name": "Fireplace Viewer",
 	"icons": [
 		{
-			"src": "/static/images/fire-pit-48x48.png",
+			"src": "./static/images/fire-pit-48x48.png",
 			"sizes": "48x48",
 			"type": "image/png"
 		},
 		{
-			"src": "/static/images/fire-pit-72x72.png",
+			"src": "./static/images/fire-pit-72x72.png",
 			"sizes": "72x72",
 			"type": "image/png"
 		},
 		{
-			"src": "/static/images/fire-pit-96x96.png",
+			"src": "./static/images/fire-pit-96x96.png",
 			"sizes": "96x96",
 			"type": "image/png"
 		},
 		{
-			"src": "/static/images/fire-pit-144x144.png",
+			"src": "./static/images/fire-pit-144x144.png",
 			"sizes": "144x144",
 			"type": "image/png"
 		},
 		{
-			"src": "/static/images/fire-pit-192x192.png",
+			"src": "./static/images/fire-pit-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/static/images/fire-pit-512x512.png",
+			"src": "./static/images/fire-pit-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
