Started adding code for website

--- a/env.template
+++ b/env.template
@@ -29,5 +29,10 @@ FIREPLACEVIEWER_FIREPLACE_URL=https://localhost:8999
 FIREPLACEVIEWER_FIREPLACE_PASSWORD=password
 FIREPLACEVIEWER_SERVER_CERT=
 
+# Fireplacelogging
+POSTGRES_DB="fireplacelogging"
+POSTGRES_PASSWORD="password"
+POSTGRES_USER="postgres"
+
 # Github private repos
 GITHUB_TOKEN=
