--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./.env
 
   mongo:
-    container_name: mongo-fireplace
+    container_name: "mongo-fireplace"
     image: mongo:bionic
     volumes:
       - mongo:/data/db
@@ -39,6 +39,34 @@ services:
     env_file:
       - ./.env
 
+  fireplacelogging:
+    container_name: "fireplacelogging"
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: ./cmd/fireplacelogging/Dockerfile
+      args:
+        GITHUB_TOKEN: ${GITHUB_TOKEN}
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    env_file:
+      - ./.env
+      - ./cmd/fireplacelogging/.env
+
+  postgres:
+    container_name: "fireplacelogging-postgres"
+    restart: unless-stopped
+    image: "postgres:14-alpine"
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./.env
+
 volumes:
   mongo:
+  postgres:
 
