--- a/cmd/fireplacelogging/app/manifest.json
+++ b/cmd/fireplacelogging/app/manifest.json
@@ -1,16 +1,13 @@
 {
   "short_name": "fireplacelogging",
-  "name": "Fireplace",
-  "icons": [
-  ],
+  "name": "Fireplace Logging",
+  "icons": [],
   "start_url": "/?source=pwa",
   "background_color": "#3367D6",
   "display": "standalone",
   "scope": "/",
   "theme_color": "#3367D6",
-  "shortcuts": [
-  ],
+  "shortcuts": [],
   "description": "Website and app for the Fireplace logging server",
-  "screenshots": [
-  ]
+  "screenshots": []
 }
