--- a/cmd/fireplacelogging/env.template
+++ b/cmd/fireplacelogging/env.template
@@ -1,6 +1,17 @@
 SERVER_HOST=localhost:8080
+ADMIN_SESSION_NAME="fireplaceloggingadmin"
+ADMIN_SESSION_MAX_AGE="172800"
+ADMIN_SESSION_KEY="my-secret-key"
 AUTO_SSL_EMAIL=
 AUTO_SSL_WHITELIST=
 DSN=host=localhost user=postgres password=password dbname=fireplacelogging port=5432
-LOG_LEVEL=info
+GOBUCKET_URL=""
+GOBUCKET_CLIENT_CODE=""
+GOBUCKET_APP_KEY=""
+LOG_LEVEL=debug
+ROOT_USER_NAME="root"
+ROOT_USER_PASSWORD="password"
+SESSION_NAME="fireplacelogging"
+SESSION_MAX_AGE="172800"
+SESSION_KEY="my-secret-key"
 
