Big update to new Frame version

--- a/cmd/fireplacelogging/env.template
+++ b/cmd/fireplacelogging/env.template
@@ -4,7 +4,7 @@ ADMIN_SESSION_MAX_AGE="172800"
 ADMIN_SESSION_KEY="my-secret-key"
 AUTO_SSL_EMAIL=
 AUTO_SSL_WHITELIST=
-DSN=host=localhost user=postgres password=password dbname=fireplacelogging port=5432
+DSN="host=localhost user=postgres password=password dbname=fireplacelogging port=5432 sslmode=disable"
 GOBUCKET_URL=""
 GOBUCKET_CLIENT_CODE=""
 GOBUCKET_APP_KEY=""
